<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:id="@+id/scrollView2"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="60dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/div1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/tv1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    android:text="@string/temple_sonkaewU"
                    android:textColor="#FFFFFF"
                    android:shadowColor="#000000"
                    android:shadowDx="1.5"
                    android:shadowDy="1.3"
                    android:shadowRadius="1.6"
                    android:textStyle="bold"

                    android:textSize="20sp"
                    android:layout_marginStart="7dp"
                    android:layout_marginBottom="4dp"
                    android:elevation="100dp"/>

                <com.smarteist.autoimageslider.SliderView
                    android:id="@+id/imgS1"
                    android:layout_width="match_parent"
                    android:layout_height="230dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:sliderAnimationDuration="600"
                    app:sliderAutoCycleDirection="back_and_forth"
                    app:sliderAutoCycleEnabled="true"
                    app:sliderIndicatorAnimationDuration="600"
                    app:sliderIndicatorGravity="center_horizontal|bottom"
                    app:sliderIndicatorMargin="15dp"
                    app:sliderIndicatorOrientation="horizontal"
                    app:sliderIndicatorPadding="3dp"

                    app:sliderIndicatorRadius="2dp"

                    app:sliderIndicatorSelectedColor="#00000000"
                    app:sliderIndicatorUnselectedColor="#00000000"
                    app:sliderScrollTimeInSec="3"
                    app:sliderStartAutoCycle="true" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="7dp">
                <TextView
                    android:id="@+id/tv2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    android:text="@string/waterfall_sridithU"
                    android:textColor="#FFFFFF"
                    android:shadowColor="#000000"
                    android:shadowDx="1.5"
                    android:shadowDy="1.3"
                    android:shadowRadius="1.6"
                    android:textStyle="bold"
                    android:textSize="20sp"
                    android:layout_marginStart="7dp"
                    android:layout_marginBottom="4dp"
                    android:elevation="100dp"/>

                <com.smarteist.autoimageslider.SliderView
                    android:id="@+id/imgS2"
                    android:layout_width="match_parent"
                    android:layout_height="230dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:sliderAnimationDuration="600"
                    app:sliderAutoCycleDirection="back_and_forth"
                    app:sliderAutoCycleEnabled="true"
                    app:sliderIndicatorAnimationDuration="600"
                    app:sliderIndicatorGravity="center_horizontal|bottom"
                    app:sliderIndicatorMargin="15dp"
                    app:sliderIndicatorOrientation="horizontal"
                    app:sliderIndicatorPadding="3dp"

                    app:sliderIndicatorRadius="2dp"

                    app:sliderIndicatorSelectedColor="#00000000"
                    app:sliderIndicatorUnselectedColor="#00000000"
                    app:sliderScrollTimeInSec="4"
                    app:sliderStartAutoCycle="true" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="7dp">
                <TextView
                    android:id="@+id/tv3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    android:text="@string/royal_pratumnakU"
                    android:textColor="#ffdf00"
                    android:shadowColor="#ba81ce"
                    android:shadowDx="1.5"
                    android:shadowDy="1.3"
                    android:shadowRadius="1.6"
                    android:textStyle="bold"
                    android:textSize="20sp"
                    android:layout_marginStart="7dp"
                    android:layout_marginBottom="4dp"
                    android:elevation="100dp"/>

                <com.smarteist.autoimageslider.SliderView
                    android:id="@+id/imgS3"
                    android:layout_width="match_parent"
                    android:layout_height="230dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:sliderAnimationDuration="600"
                    app:sliderAutoCycleDirection="back_and_forth"
                    app:sliderAutoCycleEnabled="true"
                    app:sliderIndicatorAnimationDuration="600"
                    app:sliderIndicatorGravity="center_horizontal|bottom"
                    app:sliderIndicatorMargin="15dp"
                    app:sliderIndicatorOrientation="horizontal"
                    app:sliderIndicatorPadding="3dp"

                    app:sliderIndicatorRadius="2dp"

                    app:sliderIndicatorSelectedColor="#00000000"
                    app:sliderIndicatorUnselectedColor="#00000000"
                    app:sliderScrollTimeInSec="5"
                    app:sliderStartAutoCycle="true" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="7dp">
                <TextView
                    android:id="@+id/tv4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    android:text="@string/jadeeU"
                    android:textColor="#FFFFFF"
                    android:shadowColor="#000000"
                    android:shadowDx="1.5"
                    android:shadowDy="1.3"
                    android:shadowRadius="1.6"
                    android:textStyle="bold"
                    android:textSize="20sp"
                    android:layout_marginStart="7dp"
                    android:layout_marginBottom="4dp"
                    android:elevation="100dp"/>

                <com.smarteist.autoimageslider.SliderView
                    android:id="@+id/imgS4"
                    android:layout_width="match_parent"
                    android:layout_height="230dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:sliderAnimationDuration="600"
                    app:sliderAutoCycleDirection="back_and_forth"
                    app:sliderAutoCycleEnabled="true"
                    app:sliderIndicatorAnimationDuration="600"
                    app:sliderIndicatorGravity="center_horizontal|bottom"
                    app:sliderIndicatorMargin="15dp"
                    app:sliderIndicatorOrientation="horizontal"
                    app:sliderIndicatorPadding="3dp"

                    app:sliderIndicatorRadius="2dp"

                    app:sliderIndicatorSelectedColor="#00000000"
                    app:sliderIndicatorUnselectedColor="#00000000"
                    app:sliderScrollTimeInSec="6"
                    app:sliderStartAutoCycle="true" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="7dp"
                android:layout_marginBottom="0dp"
                >
                <TextView
                    android:id="@+id/tv5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    android:text="@string/khaokho_sacmentU"
                    android:textColor="#FFFFFF"
                    android:shadowColor="#000000"
                    android:shadowDx="1.5"
                    android:shadowDy="1.3"
                    android:shadowRadius="1.6"
                    android:textStyle="bold"
                    android:textSize="20sp"
                    android:layout_marginStart="7dp"
                    android:layout_marginBottom="4dp"
                    android:elevation="100dp"/>

                <com.smarteist.autoimageslider.SliderView
                    android:id="@+id/imgS5"
                    android:layout_width="match_parent"
                    android:layout_height="230dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:sliderAnimationDuration="600"
                    app:sliderAutoCycleDirection="back_and_forth"
                    app:sliderAutoCycleEnabled="true"
                    app:sliderIndicatorAnimationDuration="600"
                    app:sliderIndicatorGravity="center_horizontal|bottom"
                    app:sliderIndicatorMargin="15dp"
                    app:sliderIndicatorOrientation="horizontal"
                    app:sliderIndicatorPadding="3dp"

                    app:sliderIndicatorRadius="2dp"

                    app:sliderIndicatorSelectedColor="#00000000"
                    app:sliderIndicatorUnselectedColor="#00000000"
                    app:sliderScrollTimeInSec="7"
                    app:sliderStartAutoCycle="true" />
            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>